##########################
# Setup.py Configuration #
##########################
[metadata]
name = wdbio
version = 0.0.1-dev
description = Wikidata-related functions for bioinformatics
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/jvfe/wdbio
download_url = https://github.com/jvfe/wdbio/releases
project_urls =
    Bug Tracker = https://github.com/jvfe/wdbio/issues
    Source Code = https://github.com/jvfe/wdbio

# Author information
author = João Cavalcante
author_email = jvfecav@gmail.com
maintainer = João Cavalcante
maintainer_email = jvfecav@gmail.com

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    # TODO add your own free-text keywords
    cookiecutter

[options]
install_requires =
    wdcuration
    SPARQLWrapper
    clipboard
    requests
    tqdm
    # TODO your requirements go here

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = wdbio

[options.packages.find]
where = wdbio

[options.extras_require]
tests =
    pytest
    coverage
docs =
    mkdocs
    mkdocstrings
    mkdocstrings.python



##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = wdbio
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    wdbio
    .tox/*/lib/python*/site-packages/wdbio

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == __main__:
    if TYPE_CHECKING:
    def __str__
    def __repr__

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
# S301 pickle
# S403 pickle
# W503 Line break before binary operator (flake8 is wrong)
# E203 whitespace before ':'
[flake8]
ignore =
    S301
    S403
    S404
    S603
    W503
    E203
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    wdbio
    tests
